--- a/SiPMStudio/io/gain_analysis.ipynb
+++ b/SiPMStudio/io/gain_analysis.ipynb
@@ -30,9 +30,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = os.path.join(\"/Volumes\", \"TOSHIBA_EXT\", \"sipm_data_2\", \"ketek_box\", \"ketek_room2\", \"t2_v2\")\n",
-    "json_path = os.path.join(\"/Volumes\", \"TOSHIBA_EXT\", \"sipm_data_2\", \"ketek_box\", \"ketek_room2\", \"ketek_room2_reprocs.json\")\n",
-    "save_path = os.path.join(\"/Volumes\", \"TOSHIBA_EXT\", \"sipm_data_2\", \"ketek_box\", \"ketek_room2\", \"plots\", \"pe_spectrums\")"
+    "data_path = os.path.join(\"/Volumes\", \"TOSHIBA_EXT\", \"sipm_data_2\", \"ketek_box\", \"ketek_ln_12162021\", \"t2\")\n",
+    "json_path = os.path.join(\"/Volumes\", \"TOSHIBA_EXT\", \"sipm_data_2\", \"ketek_box\", \"ketek_ln_12162021\", \"ketek_ln_reprocs_norm.json\")\n",
+    "save_path = os.path.join(\"/Volumes\", \"TOSHIBA_EXT\", \"sipm_data_2\", \"ketek_box\", \"ketek_ln_12162021\", \"plots\", \"pe_spectrums\")\n",
+    "\n",
+    "if not os.path.exists(save_path):\n",
+    "    os.makedirs(save_path)"
    ]
   },
   {
@@ -44,12 +47,12 @@
     {
      "data": {
       "text/plain": [
-       "['/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_room2/t2_v2/t2_ketek_room2_25.h5',\n",
-       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_room2/t2_v2/t2_ketek_room2_26.h5',\n",
-       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_room2/t2_v2/t2_ketek_room2_27.h5',\n",
-       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_room2/t2_v2/t2_ketek_room2_28.h5',\n",
-       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_room2/t2_v2/t2_ketek_room2_29.h5',\n",
-       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_room2/t2_v2/t2_ketek_room2_30.h5']"
+       "['/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_ln_12162021/t2/t2_ketek_ln_23.h5',\n",
+       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_ln_12162021/t2/t2_ketek_ln_24.h5',\n",
+       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_ln_12162021/t2/t2_ketek_ln_25.h5',\n",
+       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_ln_12162021/t2/t2_ketek_ln_26.h5',\n",
+       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_ln_12162021/t2/t2_ketek_ln_27.h5',\n",
+       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_ln_12162021/t2/t2_ketek_ln_28.h5']"
       ]
      },
      "execution_count": 3,
@@ -69,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_num = 0"
+    "file_num = 5"
    ]
   },
   {
@@ -136,7 +139,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time = np.arange(0, test_file[\"/processed/blr_wf\"].shape[1])*test_file[\"/raw/dt\"][()]"
+    "time = np.arange(0, test_file[\"/processed/channels/sipm/blr_wf\"].shape[1])*test_file[\"dt\"][()]\n",
+    "waveforms = test_file[\"/processed/channels/sipm/blr_wf\"][:]\n",
+    "adc_v = test_file[\"/processed/channels/sipm/adc_to_v\"][()]"
    ]
   },
   {
@@ -148,7 +153,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75814c76f33e425c887499d2480ba85a",
+       "model_id": "9b5fe8bb59ba41ccb0e4205b04baea88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -162,7 +167,7 @@
     {
      "data": {
       "text/plain": [
-       "Text(0, 0.5, 'Amplitude ADC')"
+       "Text(0, 0.5, 'Amplitude (mV)')"
       ]
      },
      "execution_count": 8,
@@ -172,9 +177,9 @@
    ],
    "source": [
     "plt.figure()\n",
-    "plt.plot(time, test_file[\"/processed/blr_wf\"][2])\n",
+    "plt.plot(time, waveforms[100]*adc_v*1e3)\n",
     "plt.xlabel(\"Time (ns)\")\n",
-    "plt.ylabel(\"Amplitude ADC\")"
+    "plt.ylabel(\"Amplitude (mV)\")"
    ]
   },
   {
@@ -186,7 +191,7 @@
     {
      "data": {
       "text/plain": [
-       "(137436,)"
+       "(8813,)"
       ]
      },
      "execution_count": 9,
@@ -195,7 +200,7 @@
     }
    ],
    "source": [
-    "charges = test_file[\"/processed/norm_charge\"][:]\n",
+    "charges = test_file[\"/processed/channels/sipm/charge\"][:]\n",
     "charges.shape"
    ]
   },
@@ -208,7 +213,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "882a129c557044a5be8a82015097c1f2",
+       "model_id": "1b2e6a49647a4fe990db53d279806639",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,25 +233,40 @@
     "plt.ylabel(\"Counts\")\n",
     "plt.yscale(\"log\")\n",
     "bias = test_file[\"bias\"][()]\n",
-    "#plt.savefig(os.path.join(save_path, f\"pe_spec_{bias}.png\"), dpi=600)"
+    "plt.savefig(os.path.join(save_path, f\"pe_spec_{bias}.png\"), dpi=600)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "766ad42c-9161-4b00-8892-31c244f214f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "peaks, peak_locs, amplitudes = guess_peaks(n, bins, 10, 0.95e-13)"
+    "peaks, peak_locs, amplitudes = guess_peaks(n, bins, 10, 1.5e-13)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "882edeee-b656-4405-bb36-f61cc840e1d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f9ec9557c198416698cdc978acfdb4f8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plt.figure()\n",
     "n, bins, patches = plt.hist(charges, bins=1000, histtype=\"step\", color=sns.color_palette()[0])\n",
@@ -259,30 +279,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0b9d656d-7221-452d-85ab-522a7743950d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gauss_params, gauss_errors = fit_peaks(n, bins, peaks, peak_locs, amplitudes, fit_width=25)"
+    "gauss_params, gauss_errors = fit_peaks(n, bins, peaks, peak_locs, amplitudes, fit_width=15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f7dfdc6c-13da-4e64-8b32-291253c5a86f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = np.linspace(0, 4e-12, 1000)"
+    "x = np.linspace(-0.2e-12, 4e-12, 1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f3bd6a90-17dd-450c-87cc-b4e1f7587624",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d513bc228d5546c69eb1453172a053d6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plt.figure()\n",
     "for i, params in enumerate(gauss_params):\n",
@@ -291,7 +326,7 @@
     "n, bins, patches = plt.hist(charges, bins=1000, histtype=\"stepfilled\", color=sns.color_palette()[0], alpha=0.15)\n",
     "plt.xlabel(\"Integrated Charge (C)\")\n",
     "plt.ylabel(\"Counts\")\n",
-    "plt.xlim(0, max(bins))\n",
+    "plt.xlim(-0.2e-12, max(bins))\n",
     "plt.ylim(1, 10000)\n",
     "plt.yscale(\"log\")\n",
     "plt.savefig(os.path.join(save_path, f\"pe_spec_{bias}_fit.png\"), dpi=600)"
@@ -299,7 +334,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "b41f4d0f-308a-4acf-833f-68db1f52c996",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gauss_params.insert(0, np.zeros(3))\n",
+    "gauss_errors.insert(0, np.ones(3)*1e-15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "196b4ea3-5e47-4158-baa9-9ab33ae516a6",
    "metadata": {},
    "outputs": [],
@@ -329,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "bd9e9146-902b-4f0b-bef6-42cf13789d35",
    "metadata": {},
    "outputs": [],
@@ -362,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
