Remove outdated notebooks, include examples of processing settings

--- a/SiPMStudio/examples/gain_analysis.ipynb
+++ b/SiPMStudio/examples/gain_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8074bca9-e69c-4462-858e-0499c540f3e9",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6ef016d0-d49c-476a-aefa-652a4d87ddcc",
    "metadata": {},
    "outputs": [],
@@ -40,26 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d46a35e8-94f0-4433-a727-bda0549fa5bb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_ln_12162021/t2/t2_ketek_ln_23.h5',\n",
-       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_ln_12162021/t2/t2_ketek_ln_24.h5',\n",
-       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_ln_12162021/t2/t2_ketek_ln_25.h5',\n",
-       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_ln_12162021/t2/t2_ketek_ln_26.h5',\n",
-       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_ln_12162021/t2/t2_ketek_ln_27.h5',\n",
-       " '/Volumes/TOSHIBA_EXT/sipm_data_2/ketek_box/ketek_ln_12162021/t2/t2_ketek_ln_28.h5']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_list = glob.glob(f\"{data_path}/*.h5\")\n",
     "file_list"
@@ -67,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c121694f-4583-4807-8dc6-9429912f2234",
    "metadata": {},
    "outputs": [],
@@ -77,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7e4a3459-f736-4fce-abcc-fb575b53b3ff",
    "metadata": {},
    "outputs": [],
@@ -124,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "742b58a1-1a25-44a1-a28b-bd2efbd16db2",
    "metadata": {},
    "outputs": [],
@@ -134,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ba5f04bc-4dd3-4bc9-9a87-2dc5464b2e09",
    "metadata": {},
    "outputs": [],
@@ -146,35 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ab33c557-146d-450b-9c9f-9f6022623deb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b5fe8bb59ba41ccb0e4205b04baea88",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0, 0.5, 'Amplitude (mV)')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.figure()\n",
     "plt.plot(time, waveforms[100]*adc_v*1e3)\n",
@@ -184,21 +143,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9b36c5ea-bcd6-40ba-a0b9-633286d7ab92",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8813,)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "charges = test_file[\"/processed/channels/sipm/charge\"][:]\n",
     "charges.shape"
@@ -206,29 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cdeefd91-7404-47bf-925a-e25cd7af28b4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b2e6a49647a4fe990db53d279806639",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.figure()\n",
-    "n, bins, patches = plt.hist(charges, bins=1000, histtype=\"step\", color=sns.color_palette()[0])\n",
-    "n, bins, patches = plt.hist(charges, bins=1000, histtype=\"stepfilled\", color=sns.color_palette()[0], alpha=0.15)\n",
+    "n, bins, patches = plt.hist(charges, bins=1000, range=[-0.2e-12, 5e-12], histtype=\"step\", color=sns.color_palette()[0])\n",
+    "n, bins, patches = plt.hist(charges, bins=1000, range=[-0.2e-12, 5e-12], histtype=\"stepfilled\", color=sns.color_palette()[0], alpha=0.15)\n",
     "plt.xlabel(\"Integrated Charge (C)\")\n",
     "plt.ylabel(\"Counts\")\n",
     "plt.yscale(\"log\")\n",
@@ -238,39 +171,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "766ad42c-9161-4b00-8892-31c244f214f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "peaks, peak_locs, amplitudes = guess_peaks(n, bins, 10, 1.5e-13)"
+    "peaks, peak_locs, amplitudes = guess_peaks(n, bins, 14, 2.5e-13)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "882edeee-b656-4405-bb36-f61cc840e1d5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9ec9557c198416698cdc978acfdb4f8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.figure()\n",
-    "n, bins, patches = plt.hist(charges, bins=1000, histtype=\"step\", color=sns.color_palette()[0])\n",
-    "n, bins, patches = plt.hist(charges, bins=1000, histtype=\"stepfilled\", color=sns.color_palette()[0], alpha=0.15)\n",
+    "n, bins, patches = plt.hist(charges, bins=1000, range=[-0.2e-12, 5e-12], histtype=\"step\", color=sns.color_palette()[0])\n",
+    "n, bins, patches = plt.hist(charges, bins=1000, range=[-0.2e-12, 5e-12], histtype=\"stepfilled\", color=sns.color_palette()[0], alpha=0.15)\n",
     "plt.scatter(peak_locs, amplitudes)\n",
     "plt.xlabel(\"Integrated Charge (C)\")\n",
     "plt.ylabel(\"Counts\")\n",
@@ -279,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0b9d656d-7221-452d-85ab-522a7743950d",
    "metadata": {},
    "outputs": [],
@@ -289,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f7dfdc6c-13da-4e64-8b32-291253c5a86f",
    "metadata": {},
    "outputs": [],
@@ -299,34 +217,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f3bd6a90-17dd-450c-87cc-b4e1f7587624",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d513bc228d5546c69eb1453172a053d6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.figure()\n",
     "for i, params in enumerate(gauss_params):\n",
     "    plt.plot(x, gaussian(x, *params), color=sns.color_palette()[i])\n",
-    "n, bins, patches = plt.hist(charges, bins=1000, histtype=\"step\", color=sns.color_palette()[0])\n",
-    "n, bins, patches = plt.hist(charges, bins=1000, histtype=\"stepfilled\", color=sns.color_palette()[0], alpha=0.15)\n",
+    "n, bins, patches = plt.hist(charges, bins=1000, range=[-0.2e-12, 5e-12], histtype=\"step\", color=sns.color_palette()[0])\n",
+    "n, bins, patches = plt.hist(charges, bins=1000, range=[-0.2e-12, 5e-12], histtype=\"stepfilled\", color=sns.color_palette()[0], alpha=0.15)\n",
     "plt.xlabel(\"Integrated Charge (C)\")\n",
     "plt.ylabel(\"Counts\")\n",
-    "plt.xlim(-0.2e-12, max(bins))\n",
+    "plt.xlim(-0.2e-12, 5e-12)\n",
     "plt.ylim(1, 10000)\n",
     "plt.yscale(\"log\")\n",
     "plt.savefig(os.path.join(save_path, f\"pe_spec_{bias}_fit.png\"), dpi=600)"
@@ -334,18 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b41f4d0f-308a-4acf-833f-68db1f52c996",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gauss_params.insert(0, np.zeros(3))\n",
-    "gauss_errors.insert(0, np.ones(3)*1e-15)"
+    "#gauss_params.insert(0, np.zeros(3))\n",
+    "#gauss_errors.insert(0, np.ones(3)*1e-15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "196b4ea3-5e47-4158-baa9-9ab33ae516a6",
    "metadata": {},
    "outputs": [],
